# toybox-spikes_Public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SetupVS2022.bat  SetupVS2026.bat
Asset/Shader/: TrianglePS.hlsl  TriangleVS.hlsl
CMake/: Configuration.cmake  Setup.cmake  Utils.cmake
Spikes/: CMakeLists.txt
Spikes/Application/: CMakeLists.txt
Spikes/Application/RendererApplication/: CMakeLists.txt
Spikes/Application/RendererApplication/src/: RendererApplication.cpp  RendererApplication.hpp
Spikes/Test/: CMakeLists.txt
Spikes/Test/JobSystem/: CMakeLists.txt
Spikes/Test/RenderJobSystem/: CMakeLists.txt
Spikes/Test/RenderJobSystem/src/: RenderJobSystemTest.cpp  RenderJobSystemTest.hpp
Spikes/Test/SlotMap/: CMakeLists.txt
Spikes/Test/SlotMap/src/: SlotMap.cpp
SpikesKit/: CMakeLists.txt  SpikesKitPCH.hpp
SpikesKit/Common/: CMakeLists.txt
SpikesKit/Common/include/Asset/: Asset.hpp  AssetDatabase.hpp  AssetManager.hpp  AssetTypes.hpp  ShaderAsset.hpp
SpikesKit/Common/include/Core/: Application.hpp  ApplicationContext.hpp  Assert.hpp  Base.hpp  ConsoleApplication.hpp  FileSystem.hpp  Handle.hpp  InputSystem.hpp  Log.hpp  Timer.hpp  Types.hpp  Window.hpp
SpikesKit/Common/include/Graphics/: Camera.hpp  CameraController.hpp  Material.hpp  Mesh.hpp  RenderContext.hpp  RenderResourceDatabase.hpp  RenderResourceManager.hpp  Renderer.hpp
SpikesKit/Common/include/Helper/: Geometry.hpp  StringHelper.hpp  UnitConversion.hpp
SpikesKit/Common/include/Math/: IVector.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  UUID.hpp  Vector.hpp
SpikesKit/Common/src/Asset/: Asset.cpp  AssetDatabase.cpp  AssetManager.cpp  AssetTypes.cpp  ShaderAsset.cpp
SpikesKit/Common/src/Core/: Application.cpp  ApplicationContext.cpp  Assert.cpp  ConsoleApplication.cpp  FileSystem.cpp  Handle.cpp  InputSystem.cpp  Log.cpp  Timer.cpp  Types.cpp  Window.cpp
SpikesKit/Common/src/Graphics/: Camera.cpp  CameraController.cpp  Material.cpp  Mesh.cpp  RenderContext.cpp  RenderResourceDatabase.cpp  RenderResourceManager.cpp  Renderer.cpp
SpikesKit/Common/src/Helper/: Geometry.cpp  StringHelper.cpp  (+1 more)
SpikesKit/DirectX/: CMakeLists.txt
SpikesKit/DirectX/DX11/: CMakeLists.txt  SpikesKitDX11PCH.hpp
SpikesKit/DirectX/DX12/: CMakeLists.txt  SpikesKitDX12PCH.hpp
(+121 files in other folders)
